# fal_ai_hackathon

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  B2B_API_PLAN.md  BACKEND_API_PLAN.md  Dockerfile.api  Dockerfile.backend  Dockerfile.frontend  Dockerfile.voicechat  IMPLEMENTATION_PLAN.md  JURY_QA.md  LIVING_EVENT_SYSTEM.md  PROJECT_OVERVIEW.md  README.md  SUNUM_RAPORU.md  b2b_api_architecture.excalidraw  benchmark.py  benchmark_streaming.py  benchmark_voice.py  fal_services.py  main.py  pyproject.toml  test_demo.py  test_frontend_flow.py  test_game_loop.py  test_katman2.mjs  test_play.py  test_ws_client.py
api/: config.py  deps.py  errors.py  jobs.py  main.py  store.py
api/characters/: memory.py  router.py  schema.py  service.py
api/conversations/: router.py  schema.py  service.py
api/data/: defaults.json
api/images/: router.py  schema.py  service.py
api/llm/: router.py  schema.py  service.py
api/prompts/: character_gen.py  dialogue.py  moderation.py  orchestrator.py
api/shared/: schemas.py
api/voice/: router.py  schema.py  service.py
api/worlds/: router.py  schema.py  service.py
attnfigma/: package-lock.json  package.json  vite.config.ts
attnfigma/src/: index.css  main.tsx
docs/: brief_freya_falai.md  fal_ai_rehber.md  freya_fal_teknik_rapor.md  mimari_rapor.md  ne_anladim.md  voice_ai_hackathon_strateji.md
docs/freya_api_docs/: API_NOTLARI.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: main.py
voice_chat/: index.html  package-lock.json  package.json  vite.config.ts
(+112 files in other folders)
